# pythia

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT_TECHNIQUE.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  llms.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/pythia/: __init__.py  api.py  cli.py  fetcher.py  fixers.py  i18n.py  models.py  scoring.py
src/pythia/checks/: __init__.py  base.py  content.py  html.py  schema.py  structure.py
src/pythia/generators/: __init__.py  llms_txt.py
src/pythia/reporters/: compare.py  fixes.py  json_reporter.py  markdown.py
tests/: conftest.py  test_api.py  test_cli.py  test_compare.py  test_fixers.py  test_models.py  test_scoring.py
tests/test_checks/: test_content.py  test_html.py  test_schema.py  test_structure.py
tests/test_generators/: test_llms_txt.py
