[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pythia-geo"
version = "0.4.1"
description = "The oracle that tells you how AIs see your site — GEO/AEO audit CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["geo", "aeo", "llm", "seo", "audit", "cli", "generative-engine-optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
pythia = "pythia.cli:app"

[project.urls]
Homepage = "https://github.com/BigFoot3/pythia"
Issues = "https://github.com/BigFoot3/pythia/issues"
Changelog = "https://github.com/BigFoot3/pythia/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/pythia"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.coverage.run]
source = ["src/pythia"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
